# auto-logger

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
auto_logger/: __init__.py  auto_logger.py  config.py  json_formatter.py  text_formatter.py
docs/api-doc/: mkdocs.yml
tests/: test_auto_logger.py
