[tool.poetry]
name = "auto-logger"
version = "0.1.2"
description = "Automatically add function call logs and method call logs for Python code."
authors = ["duyixian <duyixian1234@qq.com>"]
license = "MIT"
repository = "https://github.com/duyixian1234/auto-logger"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
mypy = "^0.790"
black = "^20.8b1"
coverage = {extras = ["toml"], version = "^5.3"}
mkdocs = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.master]
job = 0
suggestion-mode = "yes"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
argument-naming-style = "any"
attr-naming-style = "any"
function-naming-style = "any"
variable-naming-style = "any"

[tool.pylint.message_control]
disable = ["missing-docstring", "logging-fstring-interpolation", "similarities"]

[tool.pylint.design]
min-public-methods = 0

[tool.pytest.ini_options]
addopts = " -svv --cov=auto_logger"
minversion = "6.0"
testpaths = [
  "tests",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
fail_under = 90.0
show_missing = true
skip_covered = true
skip_empty = true
sort = "miss"

[tool.coverage.path]
source = "auto_logger"

[tool.black]
line-length = 120